--- a/Projeto.html
+++ b/Projeto.html
@@ -49,8 +49,8 @@
     </b>
  </p>
    <br>
-    ![Naja](https://user-images.githubusercontent.com/89636778/131118444-d52de021-911e-44ad-b2fb-1b0653b0da7a.jpg)
-        <img src="../img/Naja.jpg" height="250px" alt="imagem de uma Naja" title="Animal exóticos">
+    
+        <img src="https://user-images.githubusercontent.com/89636778/131118444-d52de021-911e-44ad-b2fb-1b0653b0da7a.jpg" height="250px" alt="imagem de uma Naja" title="Animal exóticos">
 
 
 <p>
