--- a/Projeto.html
+++ b/Projeto.html
@@ -50,7 +50,7 @@
  </p>
    <br>
     
-        <img src="(https://user-images.githubusercontent.com/89636778/131118444-d52de021-911e-44ad-b2fb-1b0653b0da7a.jpg)" height="250px" alt="imagem de uma Naja" title="Animal exóticos">
+        <img src="https://drive.google.com/file/d/1Vw6Z0PIBXscnU_3J3H1Z356kN4FK2Afj/view?usp=sharing" title="Animal exóticos">
 
 
 <p>
