--- a/Projeto.html
+++ b/Projeto.html
@@ -50,7 +50,7 @@
  </p>
    <br>
     
-        <img src="https://drive.google.com/open?id=1-Iiq5IbMh8AIGHr9tkxr8D49v-iExewo&authuser=paulohdm236%40gmail.com&usp=drive_fs" title="Animal exóticos">
+        <img src="https://drive.google.com/file/d/1-Iiq5IbMh8AIGHr9tkxr8D49v-iExewo/view?usp=sharing" title="Animal exóticos">
 
 
 <p>
