--- a/Projeto.html
+++ b/Projeto.html
@@ -50,7 +50,7 @@
  </p>
    <br>
     
-        <img src="https://drive.google.com/file/d/1-Iiq5IbMh8AIGHr9tkxr8D49v-iExewo/view?usp=sharing" title="Animal exóticos">
+        <img src="https://drive.google.com/file/d/1Vw6Z0PIBXscnU_3J3H1Z356kN4FK2Afj/view?usp=sharings" height="200px" width="250px">
 
 
 <p>
