--- a/Agapornis.html
+++ b/Agapornis.html
@@ -19,7 +19,7 @@
      estimação.
      </b>
 </p>
-        <img src="https://user-images.githubusercontent.com/89636778/131143295-e77065b3-0f6c-4467-a9b7-5c7e44462098.jpg">
+        <img src="https://user-images.githubusercontent.com/89636778/131143295-e77065b3-0f6c-4467-a9b7-5c7e44462098.jpg" height="200px" width"250px">
 <br>
 <p><b>Estes pequenos, charmosos, brilhantes e coloridos animais de estimação não só têm uma grande<br>
      disposição, mas também são muito resistentes e fáceis de cuidar.  Eles também serão bem fáceis<br>
