--- a/Projeto.html
+++ b/Projeto.html
@@ -50,7 +50,7 @@
  </p>
    <br>
     
-        <img src="![Naja](https://user-images.githubusercontent.com/89636778/131161230-ee194029-ff6e-484f-8699-13b541d4ec28.jpg)="200px" width="250px">
+        <img src="https://user-images.githubusercontent.com/89636778/131161230-ee194029-ff6e-484f-8699-13b541d4ec28.jpg="200px" width="250px">
 
 
 <p>
@@ -112,8 +112,7 @@
 <h2>Aves exóticas<ch2>
 <br>
 <br>
-<img src="../img/Ring neck" height="150px" width="200px">
-<p><a href="Ring _neck.html">Ring neck</a></p>
+
 
 <img src="../img/Calopsita.jpg" height="150px" width="200px">
 <p><a href="Calopsita.html">Calopsita</a></p>
