--- a/Cacatua.html
+++ b/Cacatua.html
@@ -22,7 +22,7 @@
      Conheça outras cacatuas.
    </b>
 </p>
-<img src="../img/Cacatua.jpg" height="200px" width="250px">
+<img src="https://user-images.githubusercontent.com/89636778/131162367-a11b852f-17a3-424a-9da6-a4ab21441bcc.jpg" height="200px" width="250px">
 
     </div>
 
