--- a/Projeto.html
+++ b/Projeto.html
@@ -126,7 +126,7 @@
 <img src="https://drive.google.com/file/d/1-iyl8CFo0WnU7ZbI46bbJUr4H2foUiwl/view?usp=sharing" height="150x" width="200px">
 <p><a href="Agapornis.html">Agapornis</a></p>
 
-<img src="../img/Cacatua.jpg" height="150px" width="200px">
+<img src="https://user-images.githubusercontent.com/89636778/131162367-a11b852f-17a3-424a-9da6-a4ab21441bcc.jpg" height="150px" width="200px">
 <p><a href="Cacatua.html">Cacatua</a></p>
 
 <img src="../img/Diamante de Gould.jpg" height="150px" width="200px">
