--- a/Projeto.html
+++ b/Projeto.html
@@ -114,7 +114,7 @@
 <br>
 
 
-<img src="../img/Calopsita.jpg" height="150px" width="200px">
+<img src="https://user-images.githubusercontent.com/89636778/131163427-6f75798c-ab35-49fa-bb4b-070e2cd1c50e.jpg" height="150px" width="200px">
 <p><a href="Calopsita.html">Calopsita</a></p>
 
 <img src="../img/Periquito_Australiano.jpg" height="150px" width="200px">
