--- a/Projeto.html
+++ b/Projeto.html
@@ -117,7 +117,7 @@
 <img src="https://user-images.githubusercontent.com/89636778/131163427-6f75798c-ab35-49fa-bb4b-070e2cd1c50e.jpg" height="150px" width="200px">
 <p><a href="Calopsita.html">Calopsita</a></p>
 
-<img src="../img/Periquito_Australiano.jpg" height="150px" width="200px">
+<img src=" https://user-images.githubusercontent.com/89636778/131164153-85d6825a-2ee4-45a1-bb58-aa45553259cb.jpg " height="150px" width="200px">
 <p><a href="Periquito.html">Periquito Australiano</a></p>
 
 <img src="../img/Forpus.jpg" height="150px" width="200px">
@@ -126,7 +126,7 @@
 <img src="https://drive.google.com/file/d/1-iyl8CFo0WnU7ZbI46bbJUr4H2foUiwl/view?usp=sharing" height="150x" width="200px">
 <p><a href="Agapornis.html">Agapornis</a></p>
 
-<img src="https://user-images.githubusercontent.com/89636778/131162367-a11b852f-17a3-424a-9da6-a4ab21441bcc.jpg" height="150px" width="200px">
+<img src="https://user-images.githubusercontent.chttps://user-images.githubusercontent.com/89636778/131164153-85d6825a-2ee4-45a1-bb58-aa45553259cb.jpg" height="150px" width="200px">
 <p><a href="Cacatua.html">Cacatua</a></p>
 
 <img src="../img/Diamante de Gould.jpg" height="150px" width="200px">
