--- a/Projeto.html
+++ b/Projeto.html
@@ -129,7 +129,7 @@
 <img src="https://user-images.githubusercontent.chttps://user-images.githubusercontent.com/89636778/131164153-85d6825a-2ee4-45a1-bb58-aa45553259cb.jpg" height="150px" width="200px">
 <p><a href="Cacatua.html">Cacatua</a></p>
 
-<img src="../img/Diamante de Gould.jpg" height="150px" width="200px">
+<img src="https://user-images.githubusercontent.com/89636778/131165207-ce82592b-2e50-473d-9f5a-3a8a11265691.jpg" height="150px" width="200px">
 <p><a href="Gould.html">Diamante de Gould</a></p>
 
 
