--- a/Calopsita.html
+++ b/Calopsita.html
@@ -13,7 +13,7 @@
     <hr>
    
     <div>
-<img src="../img/Calopsita.jpg" height="200px" width="250px">
+<img src="https://user-images.githubusercontent.com/89636778/131165756-9a4080d2-6f40-4c62-8259-2981d0838fe8.jpg" height="200px" width="250px">
         <p><b>A calopsita caiu no gosto das famílias como animais de estimação,<br> 
     por serem muito alegres e amigas de seu dono, além de ter capacidade de imitar sons e palavras. Em suma, são bastante interessantes e divertidas para quem as adquire.
     Neste artigo, vamos mencionar as características dessa ave e<br> 
