--- a/Forpus.html
+++ b/Forpus.html
@@ -20,7 +20,7 @@
       companheira e apreciada pelos brasileiros.
       </b>
     </p>
-<img src="../img/Forpus.jpg" height="200px" width="250px">
+<img src="https://user-images.githubusercontent.com/89636778/131166076-8cf0e029-40cd-40a0-bbbf-baabeef585ef.jpg " height="200px" width="250px">
     </div>
 
     <div>
