--- a/Gould.html
+++ b/Gould.html
@@ -13,7 +13,7 @@
     <hr>
     <div>
 <br>
-        <img src="../img/Diamante de Gould.jpg" height="200px" width="250px">
+        <img src="https://user-images.githubusercontent.com/89636778/131166320-3f3427ae-6aad-4efa-b2a2-24adbcb693a3.jpg " height="200px" width="250px">
 <br>
 <p><b>Perdi a conta das vezes que ouvi essa pergunta: “Como criar Diamante de Gould?”
      Apesar de parecer ser complicada, a criação do Diamante de Gould, feita com o auxílio da<br>
