--- a/Gould.html
+++ b/Gould.html
@@ -46,7 +46,7 @@
 
 <br>
 
-<img src="../img/Gould.jpg" height="200px" width="250px">
+<img src="https://user-images.githubusercontent.com/89636778/131166485-ce4f69fc-e0cc-4c51-a292-0578dc14f10c.jpg" height="200px" width="250px">
 
 
     </ul>
