--- a/Periquito.html
+++ b/Periquito.html
@@ -12,7 +12,7 @@
     <h1>Periquito Australiano</h1>
        <hr>
        <div>
-       <img src="../img/Periquito_Australiano.jpg" height="200px" width="250px">
+       <img src="https://user-images.githubusercontent.com/89636778/131166763-5cd4c4e4-ad51-40ae-a305-f8c1d9863049.jpg " height="200px" width="250px">
 <br>
 <p><b>O Periquito Australiano foi descoberto em 1840 no país de origem, foi levado à Europa ainda naquela época,<br> 
     causando grande alegria a todos que tinham contato com a ave e que iniciaram, então, sua criação em cativeiro. Rapidamente, foi aceito como pássaro de estimação e passou a ser adotado em larga escala pelos europeus.
