--- a/Periquito.html
+++ b/Periquito.html
@@ -68,7 +68,7 @@
  <div>
      <a name="Ancora3"></a>
     <h2>Reprodução de Periquito Australiano</h2>
-     <img src="../img/Australiano" height="200px" width="250px">
+     <img src="https://user-images.githubusercontent.com/89636778/131167189-3ce75536-2910-4336-9a3e-2b5cd32bde96.jpg" height="200px" width="250px">
      <br>
      <p><b>A reprodução do Periquito Australiano ocorre entre junho e setembro – sendo também, eventualmente,<br>
          no mês de janeiro.
