--- a/index.html
+++ b/index.html
@@ -111,22 +111,17 @@
 <br>
 <br>
 
-    <img src="https://user-images.githubusercontent.com/89636778/131163427-6f75798c-ab35-49fa-bb4b-070e2cd1c50e.jpg" height="150px" width="200px">
-<p><a href="Calopsita.html">Calopsita</a></p>
-
-<img src="https://user-images.githubusercontent.com/89636778/131164153-85d6825a-2ee4-45a1-bb58-aa45553259cb.jpg " height="150px" width="200px">
+<p><a href="Calopsita.html">Calopsita</a</p
 <p><a href="Periquito.html">Periquito Australiano</a></p>
 
-<img src="https://user-images.githubusercontent.com/89636778/131164953-67cca23e-85dc-4044-91aa-fb18e99f0c4a.jpg " height="150px" width="200px">
 <p><a href="Forpus.html">Forpus</a></p>
 
-<img src="https://drive.google.com/file/d/1-iyl8CFo0WnU7ZbI46bbJUr4H2foUiwl/view?usp=sharing" height="150x" width="200px">
+
 <p><a href="Agapornis.html">Agapornis</a></p>
 
-<img src="https://user-images.githubusercontent.chttps://user-images.githubusercontent.com/89636778/131164153-85d6825a-2ee4-45a1-bb58-aa45553259cb.jpg" height="150px" width="200px">
+
 <p><a href="Cacatua.html">Cacatua</a></p>
 
-<img src="https://user-images.githubusercontent.com/89636778/131165207-ce82592b-2e50-473d-9f5a-3a8a11265691.jpg" height="150px" width="200px">
 <p><a href="Gould.html">Diamante de Gould</a></p>
 
 
