--- a/Agapornis.html
+++ b/Agapornis.html
@@ -33,7 +33,7 @@
 <ul>
     <li><a href="#Ancora1">Comportamento do agapornis</a></li>
     <li><a href="#Ancora2">Tipos de agapornis</a></li>
-    <li><a href="3Ancora3">Características físicas do agapornis</a></li>
+    <li><a href="#Ancora3">Características físicas do agapornis</a></li>
     <li><a href="#Ancora4">Gaiolas adequadas</a></li>
 
     
